<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MapFragment">

    <fragment
        android:id="@+id/MapFragment"
        android:name="com.prototype.aishiteru.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_MapFragment_to_ChatlistFragment"
            app:destination="@id/ChatlistFragment" />
        <action
            android:id="@+id/action_MapFragment_to_achievementActivity"
            app:destination="@id/achievementActivity" />
        <action
            android:id="@+id/action_MapFragment_to_newsActivity"
            app:destination="@id/newsActivity" />
        <action
            android:id="@+id/action_MapFragment_to_quizActivity"
            app:destination="@id/quizActivity" />
    </fragment>
    <fragment
        android:id="@+id/ChatlistFragment"
        android:name="com.prototype.aishiteru.ChatlistFragment"
        android:label="@string/chatlist_fragment_label"
        tools:layout="@layout/fragment_chatlist">
        <action
            android:id="@+id/action_ChatlistFragment_to_ChatroomFragment"
            app:destination="@id/ChatroomFragment" />
        <action
            android:id="@+id/action_ChatlistFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
        <action
            android:id="@+id/action_ChatlistFragment_to_quizActivity"
            app:destination="@id/quizActivity" />
        <action
            android:id="@+id/action_ChatlistFragment_to_newsActivity"
            app:destination="@id/newsActivity" />
        <action
            android:id="@+id/action_ChatlistFragment_to_achievementActivity"
            app:destination="@id/achievementActivity" />
    </fragment>
    <fragment
        android:id="@+id/ChatroomFragment"
        android:name="com.prototype.aishiteru.ChatroomFragment"
        android:label="@string/chatroom_fragment_label"
        tools:layout="@layout/fragment_chatroom">
        <action
            android:id="@+id/action_ChatroomFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
        <action
            android:id="@+id/action_ChatroomFragment_to_ChatlistFragment"
            app:destination="@id/ChatlistFragment" />
        <action
            android:id="@+id/action_ChatroomFragment_to_achievementActivity"
            app:destination="@id/achievementActivity" />
        <action
            android:id="@+id/action_ChatroomFragment_to_newsActivity"
            app:destination="@id/newsActivity" />
        <action
            android:id="@+id/action_ChatroomFragment_to_quizActivity"
            app:destination="@id/quizActivity" />
    </fragment>
    <activity
        android:id="@+id/achievementActivity"
        android:name="com.prototype.aishiteru.activities.AchievementActivity"
        android:label="activity_achievement"
        tools:layout="@layout/activity_achievement" />
    <activity
        android:id="@+id/quizActivity"
        android:name="com.prototype.aishiteru.activities.QuizActivity"
        android:label="activity_quiz"
        tools:layout="@layout/activity_quiz" />
    <activity
        android:id="@+id/newsActivity"
        android:name="com.prototype.aishiteru.activities.NewsActivity"
        android:label="activity_news"
        tools:layout="@layout/activity_news" />
</navigation>